# CLIENTCORD

./: .gitignore  cc_init.py  pyproject.toml  readme.md
clientcord/: cache.py  cc_init.py  client.py  config.py  container.py  declare.py  errors.py  gateway.py  http.py  injector.py  intents.py  logger.py  ratelimits.py  suggestions.py
clientcord/channel/: channel.py  text.py  voice.py
clientcord/commands/: context.py  executor.py  middleware.py  options.py  parser.py  registry.py
clientcord/components/: __init__.py  builders.py
clientcord/events/: dispatcher.py
clientcord/guild/: __init__.py  guild.py  member.py  permissions.py  roles.py
clientcord/message/: __init__.py  attachments.py  message.py
clientcord/models/: __init__.py  application_command.py  attachment.py  audit_log.py  auto_moderation.py  base.py  channel.py  emoji.py  guild.py  interaction.py  member.py  message.py  role.py  user.py  webhook.py
clientcord/utils/: ansi.py  compression.py  hashing.py  memory.py  permissions.py  suggestions.py
docs/: application-commands.html  audit-logs.html  auto-moderation.html  channels.html  command-options.html  command-types.html  complete-bot.html  components.html  configuring.html  emoji.html  error-handling.html  events.html  first-command.html  guilds.html  handling-components.html  index.html  messages.html  middlewares.html  modals.html  prefix-commands.html  roles.html  subcommands.html  users.html  webhooks.html
docs/css/: style.css
docs/js/: app.js
example/components_bot/: bot.py
example/events_bot/: bot.py
example/full_bot/: bot.py  (+1 more)
(+13 files in other folders)
