[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clientcord"
version = "0.1.0"
description = "A highly modular, decorator-driven Discord framework"
dependencies = [
    "msgspec",
    "aiosonic",
    "websockets",
    "isal",
    "uvloop; sys_platform != 'win32'",
    "aiodns",
    "lmdb",
    "xxhash",
    "colorama",
    "psutil"
]
requires-python = ">=3.12"
